# authentificator-service

./: README.md  pyproject.toml
.github/workflows/: codeql.yml  mypy.yml
auth_service/application/: token_generator.py
auth_service/application/abstract/database/: database.py  transaction_manager.py
auth_service/application/abstract/database/repositories/: api_key_repository.py
auth_service/domain/: api_key.py  api_key_id.py
auth_service/presentation/: schemas.py
