[project]
name = "auth-service"
version = "0.1.0"
description = "auth service"
authors = [
    {name = "InWamos",email = "mykyta.pidgornyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standart] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "1.15.0"
ruff = "^0.11.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

