[project]
name = "auth-service"
version = "0.1.0"
description = "auth service"
authors = [{ name = "InWamos", email = "mykyta.pidgornyi@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standart] (>=0.115.12,<0.116.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "1.15.0"
ruff = "^0.11.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
local_partial_types = true
mypy_path = "auth_service"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 79
indent-width = 4
src = ["auth_service"]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",
    # identitcal by code != identical by meaning
    "SIM114",

    # awful things, never use.
    # It makes runtime work differently from typechecker
    "TC001",
    "TC002",
    "TC003",

    # only affects perfomance and brings nothing useful
    "UP038",
]
# Sort in alphabet order
extend-select = ["I"]
